# ECS-System

./: .gitignore  CMakeLists.txt  build.sh  config.ini  imgui.ini
Components/: CMakeLists.txt
Components/TestComponent/: TestComponent.cpp  TestComponent.h
ECS/: CMakeLists.txt
ECS/include/ECS/: Component.h  ComponentManager.h  ComponentRegistry.h  GameObject.h  GameObject.inl  Scene.h  SerializedField.h
ECS/include/ECS/Components/: Transform.h
ECS/private/: ComponentManager.h
ECS/src/: Component.cpp  ComponentRegistry.cpp  GameObject.cpp  Scene.cpp  main.cpp
Editor/: CMakeLists.txt
Editor/src/: DockLayout.cpp  DockLayout.h  Interface.cpp  Preferences.cpp  Themes.cpp  main.cpp
Editor/src/Panels/Console/: Console.cpp  Console.h  ConsolePanel.cpp
Editor/src/Panels/Inspector/: Inspector.cpp  InspectorPanel.cpp
Editor/src/Panels/MenuBar/: MenuBar.cpp
Editor/src/Panels/Tree/: Tree.cpp  TreePanel.cpp
Editor/src/Popups/ComponentSelector/: ComponentSelectorPopup.cpp
Editor/src/include/: Colors.h  Themes.h
Editor/src/panels/console/: console.cpp  console.h
src/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.h  main.cpp
src/Components/: Transform.cpp  Transform.h
